Changes from the NIna's review. Acute + Vitec website styles adapted.

--- a/_posts/2017-06-20-acute-sms.md
+++ b/_posts/2017-06-20-acute-sms.md
@@ -1,6 +1,6 @@
 ---
 title: Acute SMS
-intro: Vähennä vastaanoton hukka-aikoja ja ota käyttöön ajanvarausten sms-viestit
+intro: Vähennä vastaanoton hukka-aikoja ja ota käyttöön ajanvarausten sms-viestit.
 layout: post
 date: 2017-06-20
 thumbnail: sms.png
