Product description finalizations

--- a/_posts/2017-06-20-acute-sms.md
+++ b/_posts/2017-06-20-acute-sms.md
@@ -9,7 +9,6 @@ logo: vitec/vitec_logo.png
 categories: ajanvaraus
 ---
 
-<i class="fa fa-mobile fa-5x fa-pull-left" aria-hidden="true"></i>
 Acuten tekstiviestit lähtevät henkilöasiakkaiden uusista ajanvarauksista ja niiden muutoksista.
 Ajanvarauksista lähetetään myös muistutusviesti, jolla vähennetään unohduksista johtuvia hukka-aikoja.
 
@@ -19,4 +18,5 @@ Yksittäisellä asiakkaalla on myös mahdollisuus kieltää tekstiviestien lähe
 ### Ota yhteyttä
 
 Kysy lisää tai pyydä yksityiskohtainen kuvaus tästä Acuten lisäpalvelusta: 
-[myynti@vitecsoftware.com](mailto://myynti@vitecsoftware.com) tai puhelimella 03 3395 0910.
+[myynti@vitecsoftware.com](mailto://myynti@vitecsoftware.com) tai  
+puhelimella [03 3395 0910](tel://+358333950910).
