Partners instructions + product description changes.

--- a/_posts/2017-06-20-acute-sms.md
+++ b/_posts/2017-06-20-acute-sms.md
@@ -9,10 +9,10 @@ logo: vitec/vitec_logo.png
 categories: ajanvaraus
 ---
 
-Acuten tekstiviestit lähtevät henkilöasiakkaiden uusista ajanvarauksista ja niiden muutoksista.
+Acuten tekstiviestit lähtevät henkilöasiakkaiden ajanvarausten luonnista ja niiden muutoksista.
 Ajanvarauksista lähetetään myös muistutusviesti, jolla vähennetään unohduksista johtuvia hukka-aikoja.
 
-Valittavissa olevat muistutusajankohdat, lähetysten kellonajat ja oletusvalinnat ovat määriteltävissä asennuskohtaisesti.
+Muistutusviestien ajankohdat, lukumäärät ja muut toiminnallisuuteen vaikuttavat oletusvalinnat ovat määriteltävissä asennuskohtaisesti.
 Yksittäisellä asiakkaalla on myös mahdollisuus kieltää tekstiviestien lähetys omalta osaltaan.
 
 ### Ota yhteyttä
