Added large imagesize logics for portfolio posts: if single image in row, then it will be large, otherwise small. Added pricing levels into REST-API product sheet.

--- a/_posts/vitec/2017-06-20-acute-sms.md
+++ b/_posts/vitec/2017-06-20-acute-sms.md
@@ -8,9 +8,9 @@ img: vitec/acute-sms.png
 logo: vitec/vitec_logo.png
 categories: ajanvaraus
 ---
+Acute SMS palvelu lähettää ajanvarausten vahvistus- ja muistutusviestit ja sillä voi tietysti myös lähettää vapaamuotoisia tekstieviestejä asiakkaille.
 
-Acuten tekstiviestit lähtevät henkilöasiakkaiden ajanvarausten luonnista ja niiden muutoksista.
-Ajanvarauksista lähetetään myös muistutusviesti, jolla vähennetään unohduksista johtuvia hukka-aikoja.
+Ajanvarausten vahvistusviestit lähtevät sekä henkilöasiakkaiden ajanvarausten luonnista että niiden muutoksista. Muistutusviestit lähtevät automaattisesti, joka vähentää unohduksista johtuvia hukka-aikoja merkittävästi.
 
 Muistutusviestien ajankohdat, lukumäärät ja muut toiminnallisuuteen vaikuttavat oletusvalinnat ovat määriteltävissä asennuskohtaisesti.
 Yksittäisellä asiakkaalla on myös mahdollisuus kieltää tekstiviestien lähetys omalta osaltaan.
