Added company tag filtering

--- a/_posts/csam/2017-11-07-csam-s7.md
+++ b/_posts/csam/2017-11-07-csam-s7.md
@@ -6,6 +6,7 @@ date: 2017-07-11
 thumbnail: cloud_updown.png
 logo: vitec/vitec_logo.png
 categories: muut
+tags: csamhealth
 ---
 
 CSAM S7 Extranet palvelu hyödyntää CSAM S7 palvelualustaa, joka mahdollistaa terveydenhuollon-, sosiaalitoimen- ja kotihoidon palvelujen tarjoamisen laajasti samasta portaalista. Extranet palvelu on skaalautuva, jonne kootaan Työterveystoimijan asiakasyrityksille tarpeelliset palvelut.  
