--- a/_posts/vitec/2017-10-27-ebmeds.md
+++ b/_posts/vitec/2017-10-27-ebmeds.md
@@ -7,6 +7,7 @@ thumbnail: stethoscope.png
 img: 
 logo: vitec/vitec_logo.png
 categories: muut
+tags: vitec
 ---
 
 EBMeDS on Suomalaisen lääkäriseuran Duodecimin kehittämä kliinisen päätöksentuen palvelu, joka yhdistää potilaan tilaa kuvaavat sähköiseen potilaskertomukseen tallennetut tiedot lääketieteelliseen tietoon tuottaen käyttäjälleen potilaskohtaisesti räätälöityjä toimintaohjeita. 
