--- a/_posts/kotopro/2017-08-21-kotopro.md
+++ b/_posts/kotopro/2017-08-21-kotopro.md
@@ -7,6 +7,7 @@ thumbnail: document_center.png
 img: vitec/acute-lasku.png
 logo: vitec/vitec_logo.png
 categories: dokumentointi
+tags: kotopro
 ---
 
 ## Kotopron avulla toteutat etäkuntoutusta mobiilisti
