--- a/_posts/vitec/2017-06-20-acute-sms.md
+++ b/_posts/vitec/2017-06-20-acute-sms.md
@@ -7,6 +7,7 @@ thumbnail: sms.png
 img: vitec/acute-sms.png
 logo: vitec/vitec_logo.png
 categories: ajanvaraus
+tags: vitec
 ---
 Acute SMS palvelu lähettää ajanvarausten vahvistus- ja muistutusviestit ja sillä voi tietysti myös lähettää vapaamuotoisia tekstieviestejä asiakkaille.
 
