--- a/_posts/crasman/2017-12-08-crasman.md
+++ b/_posts/crasman/2017-12-08-crasman.md
@@ -3,7 +3,7 @@ title: Crasman
 intro: Räätälöity ajanvarausnäkymä verkkoon
 layout: post
 date: 2017-12-08
-thumbnail: calendar.png
+thumbnail: calendar_7.png
 logo: vitec/vitec_logo.png
 categories: ajanvaraus
 tags: crasman
