Some grammar fixes.

--- a/_posts/csam/2017-11-07-csam-s7.md
+++ b/_posts/csam/2017-11-07-csam-s7.md
@@ -1,6 +1,6 @@
 ---
 title: CSAM S7 Extranet
-intro: Terveydenhuollon-, sosiaalitoimen- ja kotihoidon palvelut samasta portaalista.
+intro: Terveydenhuollon, sosiaalitoimen ja kotihoidon palvelut samasta portaalista.
 layout: post
 date: 2017-07-11
 thumbnail: cloud_updown.png
@@ -11,7 +11,7 @@ tags: csamhealth
 
 CSAM S7 Extranet palvelu hyödyntää CSAM S7 palvelualustaa, joka mahdollistaa terveydenhuollon-, sosiaalitoimen- ja kotihoidon palvelujen tarjoamisen laajasti samasta portaalista. Extranet palvelu on skaalautuva, jonne kootaan Työterveystoimijan asiakasyrityksille tarpeelliset palvelut.  
 
-S7 Extranet palvelu koostuu kolmesta palvelukokonaisuudesta; Yrityskäyttäjän-, Työterveystoimijan- ja Asiakaskäyttäjän portaalista. Työterveyden asiakasyritykset pääsevät hyödyntämään Extranet palvelua, joka on integroitu Acuteen, seuraavia palveluja:
+S7 Extranet palvelu koostuu kolmesta palvelukokonaisuudesta; Yrityskäyttäjän, Työterveystoimijan ja Asiakaskäyttäjän portaalista. Työterveyden asiakasyritykset pääsevät hyödyntämään Extranet palvelua, joka on integroitu Acuteen, seuraavia palveluja:
 
 -	Suojattu viestintä yrityksen ja työterveystoimijan välillä
 -	Ylläpitämään yrityksen työntekijöiden henkilöstötietoja
