Added tel:// protocol to link

--- a/_posts/carecode/2018-02-09-carecode.md
+++ b/_posts/carecode/2018-02-09-carecode.md
@@ -50,4 +50,4 @@ Heikki Tarkkila
 Liiketoimintajohtaja  
 
 [heikki@carecode.fi](mailto://heikki@carecode.fi)  
-[+358 40 712 2126](+358407122126)
+[+358 40 712 2126](tel://+358407122126)
