EbMeds category changes

--- a/_posts/duodecim/2017-10-27-ebmeds.md
+++ b/_posts/duodecim/2017-10-27-ebmeds.md
@@ -7,12 +7,12 @@ thumbnail: stethoscope.png
 img: 
 logo: vitec/vitec_logo.png
 categories: muut
-tags: vitec
+tags: duodecim
 ---
 
 EBMeDS on Suomalaisen lääkäriseuran Duodecimin kehittämä kliinisen päätöksentuen palvelu, joka yhdistää potilaan tilaa kuvaavat sähköiseen potilaskertomukseen tallennetut tiedot lääketieteelliseen tietoon tuottaen käyttäjälleen potilaskohtaisesti räätälöityjä toimintaohjeita. 
 
-![EBMeDS](/portfolio/vitec/ebmeds.png)
+![EBMeDS](/portfolio/duodecim/paatoksentuki.jpg)
 
 EBMeDS-nimi tulee termistä "lääketieteelliseen näyttöön perustuva sähköinen päätöksentuki" (Evidence-Based Medicine electronic Decision Support).
 
