Added SMS Youtube video

--- a/_posts/vitec/2017-06-20-acute-sms.md
+++ b/_posts/vitec/2017-06-20-acute-sms.md
@@ -8,6 +8,7 @@ img: vitec/acute-sms.png
 logo: vitec/vitec_logo.png
 categories: ajanvaraus
 tags: vitec
+video: true
 ---
 Acute SMS palvelu lähettää ajanvarausten vahvistus- ja muistutusviestit ja sillä voi tietysti myös lähettää vapaamuotoisia tekstieviestejä asiakkaille.
 
@@ -15,6 +16,8 @@ Ajanvarausten vahvistusviestit lähtevät sekä henkilöasiakkaiden ajanvarauste
 
 Muistutusviestien ajankohdat, lukumäärät ja muut toiminnallisuuteen vaikuttavat oletusvalinnat ovat määriteltävissä asennuskohtaisesti.
 Yksittäisellä asiakkaalla on myös mahdollisuus kieltää tekstiviestien lähetys omalta osaltaan.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IV4l6RdYm50" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 ### Ota yhteyttä
  
