--- a/_posts/duodecim/2017-10-27-ebmeds.md
+++ b/_posts/duodecim/2017-10-27-ebmeds.md
@@ -10,15 +10,27 @@ categories: muut
 tags: duodecim
 ---
 
-EBMeDS on Suomalaisen lääkäriseuran Duodecimin kehittämä kliinisen päätöksentuen palvelu, joka yhdistää potilaan tilaa kuvaavat sähköiseen potilaskertomukseen tallennetut tiedot lääketieteelliseen tietoon tuottaen käyttäjälleen potilaskohtaisesti räätälöityjä toimintaohjeita. 
+EBMeDS on kliinisen päätöksentuen palvelu, joka yhdistää potilaan tilaa kuvaavat tiedot (lääkkeet, diagnoosit, laboratoriotulokset, toimenpiteet) tutkittuun lääketieteelliseen tietoon tuottaen käyttäjälleen potilaskohtaisesti räätälöityjä toimintaohjeita ja varoituksia. 
 
-![EBMeDS](/portfolio/duodecim/paatoksentuki.jpg)
 
-EBMeDS-nimi tulee termistä "lääketieteelliseen näyttöön perustuva sähköinen päätöksentuki" (Evidence-Based Medicine electronic Decision Support).
+![EBMeDS](/portfolio/duodecim/Muistutteet.png)
 
-EBMeDS-palvelua voidaan käyttää Acute-järjestelmän kautta, jolloin se saa potilaskertomuksesta potilasta kuvaavia rakenteisia tietoja ja palauttaa käyttäjälle muistutteita, hoitoehdotuksia ja diagnooseihin liittyviä hoitosuosituslinkkejä.
 
-### Ota yhteyttä
+Jo yli puolet suomalaisista lääkäreistä käyttää päätöksentukea työnsä tukena. Sen käyttö nopeuttaa työskentelyä sekä edistää potilasturvallisuutta ja hoidon tasoa. Päätöksentukea hyödyntämällä voi myös säästää kustannuksissa.
+
+EBMeDS-palvelua voidaan käyttää Acute-järjestelmän kautta, jolloin se saa potilaskertomuksesta potilasta kuvaavia rakenteisia tietoja ja tuottaa varoituksia, muistutteita, ehdottaa hoitoa sekä tarjoaa linkkejä hoitosuosituksiin. Muistutteita syntyy automaattisesti myös päätöksentukeen sisällytetyistä lääketietokannoista (munuaisten vajaatoiminta, raskaus, imetys, kontraindikaatiot ja yliannostus). Päätöksentuen avulla myös sähköisten lomakkeiden ja apuohjelmien täyttäminen nopeutuu, kun tiedot voidaan poimia automaattisesti potilaskertomuksesta.
+
+Päätöksentuki tarjoaa myös erittäin tehokkaan näkymän lääkityksen kokonaisarvioinnista (LKA). Lääkityksen kokonaisarvio analysoi potilaan lääkityksen 9 eri tietokannan avulla (indikaatiot, kontraindikaatiot, munuaisten vajaatoiminta, haittavaikutukset, raskaus, imetys, laboratoriotulokset ja yliannostus). 
+
+
+![EBMeDS](/portfolio/duodecim/LKA.png)
+
+Analyysin pohjalta sovellus palauttaa koosteen potilaan lääkityksestä ja siihen liittyvistä oleellisista huomioista. Lääkityksen kokonaisarvion avulla terveydenhuollon ammattilainen voi nopeasti tarkistaa potilaan lääkityksen turvallisuuden ja korjata siinä havaitut mahdolliset puutteet.  
+
+### Lisätietoja
+
+[www.ebmeds.org](http://www.ebmeds.org/)
+
 
 Kysy lisää tai pyydä yksityiskohtainen kuvaus tästä Acuten lisäpalvelusta:  
 
