Update contact details
* Also update screenshot

--- a/_posts/carecode/2018-02-09-carecode.md
+++ b/_posts/carecode/2018-02-09-carecode.md
@@ -2,7 +2,7 @@
 title: Carecode kommunikaatiopalvelu
 intro: Terveydenhuollon kommunikaatiopalvelu
 layout: post
-date: 2018-02-09
+date: 2018-08-20
 thumbnail: user_message.png
 logo: vitec/vitec_logo.png
 categories: muut
@@ -16,13 +16,13 @@ Carecode on pilvipohjainen kommunikaatiopalvelu sosiaali- ja terveydenhuoltoon. 
 ## Ominaisuudet
 
 * **Chat**  
-Tietoturvallinen viestintä reaalia-ajassa tai viiveellä potilaan kanssa tai ammattilaisten kesken. Käytännöllinen työkalu puhelimen ja sähköpostin korvaamiseksi.  
+Tietoturvallinen viestintä reaaliajassa tai viiveellä. Potilaan kanssa tai ammattilaisten kesken. Käytännöllinen työkalu puhelimen ja sähköpostin korvaamiseksi.  
 
 * **Etävastaanotot**  
 Potilaiden hoito etänä kotona tai esim. etätoimipisteessä. Videopuhelut potilaan ja hoitohenkilökunnan välillä suoraan selaimessa. Toimii hyvin myös mobiililaitteilla.  
 
 * **Työnohjaus**  
-Mahdollisuus laajasti rakentaa hoito-polkuja tapaus- ja käyttäjäkohtaisesti. Viestit voidaan ohjata automaattisesti oikealle vastaanottajalle.  
+Mahdollisuus rakentaa laajasti hoitopolkuja tapaus- ja käyttäjäkohtaisesti. Viestit voidaan ohjata automaattisesti oikealle vastaanottajalle.  
 
 * **Virtuaalinen odotushuone**  
 Potilaiden viestit voidaan automaattisesti ohjata odottamaan sopivaa vastaanottajaa.  
@@ -32,7 +32,7 @@ Potilaiden viestit voidaan automaattisesti ohjata odottamaan sopivaa vastaanotta
   - Palvelu tarjotaan Suomesta (ei ulkomaalaisia palvelimia)
   - Rekisteri on asiakkaan, täten myös tiedot
   - Tuottamisessa ei käytetä kolmansien osapuolien sovelluksia, jotka pääsisivät käsiksi tietoihin
-  - GDPR-mukaisuus siirtymäkauden loppuun mennessä
+  - GDPR:n mukainen
   
 
   
@@ -46,8 +46,8 @@ Acute-integraation avulla potilaskäyttäjät voidaan tuoda palvelun piiriin aut
 
 Yhteystiedot:  
 
-Heikki Tarkkila  
-Liiketoimintajohtaja  
+Magnus Tötterman  
+Toimitusjohtaja  
 
-[heikki@carecode.fi](mailto://heikki@carecode.fi)  
-[+358 40 712 2126](tel://+358407122126)
+[magnus@carecode.fi](mailto://magnus@carecode.fi)  
+[+358 40 712 2146](tel://+358407122146)
