Fixed all sales e-mail addresses

--- a/_posts/duodecim/2017-10-27-ebmeds.md
+++ b/_posts/duodecim/2017-10-27-ebmeds.md
@@ -34,5 +34,5 @@ Analyysin pohjalta sovellus palauttaa koosteen potilaan lääkityksestä ja siih
 
 Kysy lisää tai pyydä yksityiskohtainen kuvaus tästä Acuten lisäpalvelusta:  
 
-[myynti@vitecsoftware.com](mailto://myynti@vitecsoftware.com) tai  
+[myynti.acute@vitecsoftware.com](mailto://myynti.acute@vitecsoftware.com) tai  
 puhelimella [03 3395 0910](tel://+358333950910).
