--- a/_posts/vitec/2017-06-20-acute-sms.md
+++ b/_posts/vitec/2017-06-20-acute-sms.md
@@ -22,5 +22,5 @@ Yksittäisellä asiakkaalla on myös mahdollisuus kieltää tekstiviestien lähe
 ### Ota yhteyttä
  
 Kysy lisää tai pyydä yksityiskohtainen kuvaus tästä Acuten lisäpalvelusta:  
-[myynti@vitecsoftware.com](mailto://myynti@vitecsoftware.com) tai  
+[myynti.acute@vitecsoftware.com](mailto://myynti.acute@vitecsoftware.com) tai  
 puhelimella [03 3395 0910](tel://+358333950910).
