Updated Diktamen contact details

--- a/_posts/diktamen/2018-03-02-diktamen.md
+++ b/_posts/diktamen/2018-03-02-diktamen.md
@@ -2,7 +2,7 @@
 title: Diktamen sanelu
 intro: Nopeampaa potilastietojen kirjaamista sanelulla
 layout: post
-date: 2018-03-02
+date: 2018-09-20
 thumbnail: voice_recorder.png
 logo: vitec/vitec_logo.png
 categories: sanelu
@@ -26,6 +26,6 @@ Diktamen-sanelunpurkupalvelun avulla varmistat, että tekstinkäsittelyssä on r
 
 [diktamen.com](https://diktamen.com)  
 
-Emmi Viinamäki, myyntipäällikkö   
-[emmi.viinamaki@diktamen.com](mailto://emmi.viinamaki@diktamen.com)  
-[040 080 2081](tel://+358400802081)
+Antti Leskinen, Key Account Manager   
+[antti.leskinen@diktamen.com](mailto://antti.leskinen@diktamen.com)  
+[+358 44 771 1786](tel://+358447711786)
